# simple_cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .env.example  .envrc  .gitignore  LICENSE  README.md  cookiecutter_initial_values_documentation.json  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py  example_file.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
